--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Sg3.ch, Anleitungen, Projekte und Gedanken zur digitalen Welt
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hallo, Sg. hier!</h1>
+	<p>Auch bekannt als <em>sigasser</em> z. B. auf Twitter und Telegram. <a href="/about">hier erfährt ihr etwas mehr über mich...</a></p>
 </div><!-- /.blurb -->
