--- a/about.html
+++ b/about.html
@@ -2,9 +2,10 @@
 layout: page
 title: Über uns
 background: '/img/bg-contact.jpg'
+form: true
 ---
-<body>
 
+<body>
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
