--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Contact Me
+title: Kontakt
 description: Hast Du Fragen? Wir beantworten sie gerne.
 background: '/img/bg-contact.jpg'
 form: true
@@ -17,21 +17,21 @@ form: true
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
-      <label>Email Address</label>
+      <label>Email Adresse</label>
       <input type="email" class="form-control" placeholder="Email Adresse" id="email" required data-validation-required-message="Bitte gib Deine Email Adresse ein.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group col-xs-12 floating-label-form-group controls">
-      <label>Phone Number</label>
+      <label>Telefonnummer</label>
       <input type="tel" class="form-control" placeholder="Telefonnummer" id="phone">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
-      <label>Message</label>
+      <label>Nachricht</label>
       <textarea rows="5" class="form-control" placeholder="Nachricht" id="message" required data-validation-required-message="Bitte hinterlasse hier Deine Nachricht."></textarea>
       <p class="help-block text-danger"></p>
     </div>
